# sd-cwt

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  clean_cbor2_imports.py  consolidate_edn_cddl.py  fix_test_imports.py  main.py  pyproject.toml  pytest.ini  update_cbor_imports.py
.github/workflows/: test.yml
docs/: guide.md
docs/specifications/: draft-ietf-spice-sd-cwt-04.txt  draft-ietf-spice-sd-cwt-latest.md  draft-ietf-spice-sd-cwt-latest.txt
examples/: cddl_validation.py  cose_sign1_demo.py  cose_thumbprint.py  deterministic_redaction_demo.py  holder_binding_demo.py  minimal_api_usage.py  redaction_demo.py  sd_cwt_specification_example.py  validate_cbor.py
src/sd_cwt/: __init__.py  cbor_utils.py  cddl_schemas.py  cddl_utils.py  cli.py  cose_keys.py  cose_sign1.py  edn_redaction.py  edn_utils.py  holder_binding.py  issuer.py  redaction.py  resolvers.py  sd_cwt.py  signers.py  simple_api.py  thumbprint.py  validation.py  verifiers.py
tests/: __init__.py  conftest.py  test_appendix_c_keys.py  test_basic.py  test_cose_keys.py  test_cose_sign1.py  test_cose_sign1_integration.py  test_edge_cases.py  test_edn_api_comprehensive.py  test_edn_redaction_deterministic.py  test_es256_key_generation.py  test_holder_binding.py  test_ietf_124.py  test_key_binding_token.py  test_mandatory_to_disclose_claims.py  test_redaction.py  test_redaction_tags.py  test_resolvers.py  test_simple_api_workflow.py  test_specification_examples.py  test_specification_private_keys.py  test_verifier_cddl_validation.py
tests/data/: test_vectors.json
tests/integration/: test_end_to_end.py
tests/unit/: test_cbor_edn.py  test_cddl_validation.py  test_crypto.py  test_cwt.py  test_disclosure.py  test_edn_redaction.py  test_issuer.py  test_thumbprint.py  test_validation.py
