[project]
name = "sd-cwt"
version = "0.1.0"
description = "Implementation of SPICE SD-CWT specification for selective disclosure CWTs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["cwt", "cbor", "spice", "selective-disclosure", "privacy", "cryptography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "cbor-diag>=1.0.0", # For CBOR diagnostic notation via edn_utils
    "fido2>=1.1.0", # For CBOR/COSE cryptographic operations
    "zcbor>=0.9.1", # For CDDL validation via cddl_utils
    "cbor2>=5.4.0", # For CBOR encoding/decoding via cbor_utils
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    
    # Code quality
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0",
    
    # Development tools
    "ipython>=8.0.0",
    "bandit>=1.7.0",  # Security linting
    "safety>=2.3.0",  # Dependency security checks
]

[project.urls]
Homepage = "https://github.com/tradeverifyd/sd-cwt"
Repository = "https://github.com/tradeverifyd/sd-cwt"
Documentation = "https://github.com/tradeverifyd/sd-cwt#readme"
Issues = "https://github.com/tradeverifyd/sd-cwt/issues"

[project.scripts]
sd-cwt = "sd_cwt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sd_cwt"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long
    "E402",  # module level import not at top of file (conflicts with module docstrings)
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=sd_cwt",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/sd_cwt"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
